Using Base64 implementation that is not internal to some lib.